naming container instances

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   db:
+    container_name: db
     image: postgres:13
     environment:
       POSTGRES_USER: ${DB_USER}
@@ -20,6 +21,7 @@ services:
       dockerfile: Dockerfile
     platform: linux/arm64
     hostname: backend
+    container_name: backend
     environment:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -33,6 +35,7 @@ services:
         condition: service_healthy
 
   frontend:
+    container_name: frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile
